feat: 상품 랭킹 집계 구현